[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "computesdk"
version = "0.1.0"
description = "A unified SDK for running code in remote sandboxes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "ComputeSDK Team" }
]
keywords = ["sandbox", "code-execution", "cloud", "remote-execution", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.25.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.2",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/computesdk/computesdk"
Documentation = "https://docs.computesdk.com"
Repository = "https://github.com/computesdk/computesdk"

[tool.hatch.build.targets.wheel]
packages = ["computesdk"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
